--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
             Pakistan Super League All Teams Squad 2023
         </title>
     </head>
-    <body background="./quetta.html">
-
+    <body bgcolor="white">
+        <font color="black">
+            <ul>
+            <li style="border: 1px solid black ;"><b><a href="./index.html">Home</a></b></li>
+            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
+            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
+            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
+            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
+            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
+            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
+            </ul>
+        </font>
+        <hr/>
+        <center><img src="./psl logo.png" width="270" height="200" border="2"></center>
+        <center><h1>Pakistan Super League All Teams Suqad 2023</h1></center>
+    <center>
+        <img src="./babar azam.jpg" width="150" height="200" border="2">
+        <img src="./imad wasim.jpg" width="150" height="200" border="2">
+        <img src="./sarfaraz ahmed.webp" width="150" height="200" border="2">
+        <img src="./shaheen afridi.jpg" width="150" height="200" border="2">
+        <img src="./muhammad rizwan.jpg" width="150" height="200" border="2">
+        <img src="./shadab khan.jpg" width="150" height="200" border="2">
+    </center>
+    <center>
+        <img src="./peshawar-zalmi.png" width="150" height="150" border="2">
+        <img src="./karachi kings.png" width="150" height="150" border="2">
+        <img src="./Quetta_Gladiators.png" width="150" height="150" border="2">
+        <img src="./lahore qalandars.png" width="150" height="150" border="2">
+        <img src="./MultanSultans.png" width="150" height="150" border="2">
+        <img src="./Islamabad_United.png" width="150" height="150" border="2">
+    </center>
+    <hr/>
+    <center><h1>Are You Ready For PSL 2023 ?</h1></center>
     </body>
 </html>
