karachi kings logo change in homepage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </center>
     <center>
         <img src="./peshawar-zalmi.png" width="150" height="150" border="2">
-        <img src="./karachi kings.png" width="150" height="150" border="2">
+        <img src="./karachi 3.png" width="150" height="150" border="2">
         <img src="./Quetta_Gladiators.png" width="150" height="150" border="2">
         <img src="./lahore qalandars.png" width="150" height="150" border="2">
         <img src="./MultanSultans.png" width="150" height="150" border="2">
