--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="white">
-        <font color="black">
-            <ul>
-            <li style="border: 1px solid black ;"><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        </font>
-        <hr/>
-        <center><img src="./psl logo.png" width="270" height="200" border="2"></center>
-        <center><h1>Pakistan Super League All Teams Suqad 2023</h1></center>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li class="navbutton"><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
     <center>
-        <img src="./babar azam.jpg" width="150" height="200" border="2">
-        <img src="./imad wasim.jpg" width="150" height="200" border="2">
-        <img src="./sarfaraz ahmed.webp" width="150" height="200" border="2">
-        <img src="./shaheen afridi.jpg" width="150" height="200" border="2">
-        <img src="./muhammad rizwan.jpg" width="150" height="200" border="2">
-        <img src="./shadab khan.jpg" width="150" height="200" border="2">
+        <h1>Homepage</h1>
+        <h2>PSL 2023 Captains</h2>
     </center>
     <center>
-        <img src="./peshawar-zalmi.png" width="150" height="150" border="2">
-        <img src="./karachi 3.png" width="150" height="150" border="2">
-        <img src="./Quetta_Gladiators.png" width="150" height="150" border="2">
-        <img src="./lahore qalandars.png" width="150" height="150" border="2">
-        <img src="./MultanSultans.png" width="150" height="150" border="2">
-        <img src="./Islamabad_United.png" width="150" height="150" border="2">
+        <img src="./images/shadab khan.png" width="200" height="200">
+        <img src="./images/imad wasim.png" width="200" height="200">
+        <img src="./images/shaheen afridi.png" width="200" height="200">
+        <br/>
+        <img src="./images/Muhammad rizwan.png" width="200" height="200">
+        <img src="./images/babar azam.png" width="200" height="200">
+        <img src="./images/sarfaraz ahmed.png" width="200" height="200">
     </center>
-    <hr/>
-    <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-    </body>
+</body>
 </html>
