--- a/islamabad.html
+++ b/islamabad.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="maroon">
-        <font color="orange">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li style="border: 1px solid orange;"><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./Islamabad_United.png" height="150" width="140" border="2"></center>
-        <center><h1>Islamabad United</h1></center>
-        </font>
-        <font color="yellow">
-        <p>
-            <img src="./shadab khan.jpg" height="400" width="250" border="2" align="right">
-            <h3>
-                1. Shadab Khan<br/>2. Asif Ali<br/>3. Mohammad Wasim Jnr<br/>4. Azam Khan<br/>5. Faheem Ashraf<br/>6. Hasan Ali<br/>7. Colin Munro<br/>8. Paul Stirling<br/>9. Alex Hales<br/>10. Rahmanullah Gurbaz<br/>11. Fazalhaq Farooqi<br/>12. Abrar Ahmed<br/>13. Sohaib Maqsood<br/>14. Rumman Raees<br/>15. Zeeshan Zamir<br/>16. Hassan Nawaz<br/>17. Moeen Ali<br/>18. Mubasir Khan
-            </h3>
-        </p>
-        <hr/>
-        </font>
-        <font color="orange">
-    <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li class="navbutton"><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Islamabad United Squad</h1>
+    </center>
+    <div class="islamabad">
+        <img class="img" src="./images/shadab khan.png" alt="Shadab Khan" width="350" height="350" align="right">
+    <ol>
+        <li>Shadab Khan (Captain)</li>
+        <li>Asif Ali</li>
+        <li>Muhammad Wasim Junior</li>
+        <li>Azam Khan</li>
+        <li>Fahim Ashraf</li>
+        <li>Hasan Ali</li>
+        <li>Colin Munro</li>
+        <li>Paul Stirling</li>
+        <li>Alex Hales</li>
+        <li>Rahmanullah Gurbaz</li>
+        <li>Fazalhaq Farooqui</li>
+        <li>Abrar Ahmed</li>
+        <li>Sohaib Maqsood</li>
+        <li>Rumman Raees</li>
+        <li>Zeeshan Zamir</li>
+        <li>Hassan Nawaz</li>
+        <li>Moeen Ali</li>
+        <li>Mubashir Khan</li>
+        <li>Tom Curran</li>
+        <li>Zafar Gohar</li>
+    </ol>
+    </div>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
