--- a/karachi.html
+++ b/karachi.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="darkblue">
-        <font color="maroon">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li style="border: 1px solid maroon;"><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./karachi 3.png" height="150" width="190" border="2"></center>
-        <center><h1>Karachi Kings</h1></center>
-        </font>
-        <font color="yellow">
-            <p>
-                <img src="./imad wasim.jpg" height="400" width="235" border="2" align="right">
-                <h3>
-                    1. Imad Wasim (Captain)<br/>2. Haider Ali<br/>3. Mohammad Amir<br/>4. Shoaib Malik<br/>5. Aamir Yamin<br/>6. Mir Hamza<br/>7. Sharjeel Khan<br/>8. Qasim Akram<br/>9. Matthew Wade<br/>10. Imran Tahir<br/>11. James Vince<br/>12. James Fuller<br/>13. Andrew Tye<br/>14. Tayyab Tahir<br/>15. Mohammad Akhlaq<br/>16. Irfan Khan Niazi<br/>17. Tabraiz Shamsi<br/>18. Mohammad Umar
-                </h3>
-            </p>
-        </font>
-        <font color="maroon">
-            <hr/>
-        <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li class="navbutton"><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Karachi Kings Squad</h1>
+    </center>
+    <div class="karachi">
+        <img class="img" src="./images/imad wasim.png" alt="Imad Wasim" width="350" height="350" align="right">
+    <ol>
+        <li>Imad Wasim (Captain)</li>
+        <li>Haider Ali</li>
+        <li>Muhammad Aamir</li>
+        <li>Shoaib Malik</li>
+        <li>Aamir Yamin</li>
+        <li>Mir Hamza</li>
+        <li>Sharjeel Khan</li>
+        <li>Qasim Akram</li>
+        <li>Matthew Wade</li>
+        <li>Imran Tahir</li>
+        <li>James Vince</li>
+        <li>James Fuller</li>
+        <li>Andrew Tye</li>
+        <li>Tayyab Tahir</li>
+        <li>Muhammad Akhlaq</li>
+        <li>Irfan Khan Niazi</li>
+        <li>Tabraiz Shamsi</li>
+        <li>Muhammad Umar</li>
+        <li>Ben Cutting</li>
+        <li>Musa Khan</li>
+    </ol>
+    </div>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
