--- a/multan.html
+++ b/multan.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="darkgreen">
-        <font color="blue">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li style="border: 1px solid blue;"><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./MultanSultans.png" height="150" width="150" border="2"></center>
-        <center><h1>Multan Sultans</h1></center>
-        </font>
-        <font color="black">
-            <p>
-                <img src="./muhammad rizwan.jpg" height="400" width="250" border="2" align="right">
-                <h3>
-                    1. Mohammad Rizwan (Captain)<br/>2. Khushdil Shah<br/>3. Rilee Rossouw<br/>4. Shan Masood<br/>5. Shahnawaz Dahani<br/>6. Tim David<br/>7. Abbas Afridi<br/>8. Ihsanullah<br/>9. David Miller<br/>10. Josh Little<br/>11. Akeal Hosein<br/>12. Usama Mir<br/>13. Usman Khan<br/>14. Sameen Gul<br/>15. Anwar Ali<br/>16. Mohammad Sarwar<br/>17. Adil Rashid<br/>18. Arafat Minhas
-                </h3>
-            </p>
-        </font>
-        <font color="blue">
-            <hr/>
-        <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li class="navbutton"><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Multan Sultans Squad</h1>
+    </center>
+    <div class="multan">
+        <img src="./images/Muhammad rizwan.png" alt="Muhammad Rizwan" width="350" height="350" align="right">
+    <ol>
+        <li>Muhammad Rizwan (Captain)</li>
+        <li>Khushdil Shah</li>
+        <li>Rilee Rossouw</li>
+        <li>Shan Masood</li>
+        <li>Shahnawaz Dahani</li>
+        <li>Tim David</li>
+        <li>Abbas Afridi</li>
+        <li>IhsanUllah</li>
+        <li>David Miller</li>
+        <li>Josh Little</li>
+        <li>Akeal Hosein</li>
+        <li>Usama Mir</li>
+        <li>Usman Khan</li>
+        <li>Sameen Gul</li>
+        <li>Anwar Ali</li>
+        <li>Muhammad Sarwar</li>
+        <li>Adil Rashid</li>
+        <li>Arafat Minhas</li>
+        <li>Kieron Pollard</li>
+        <li>Ammad Butt</li>
+    </ol>
+    </div>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
