--- a/quetta.html
+++ b/quetta.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="purple">
-        <font color="yellow">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li style="border: 1px solid yellow;"><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./Quetta_Gladiators.png" height="150" width="130" border="2"></center>
-        <center><h1>Quetta Gladiators</h1></center>
-        </font>
-        <font color="white">
-            <p>
-                <img src="./sarfaraz ahmed.webp" height="400" width="300" border="2" align="right">
-                <h3>
-                    1. Sarfaraz Ahmed (Captain)<br/>2. Mohammad Nawaz<br/> 3. Iftikhar Ahmed<br/>4.  Jason Roy<br/>5. Mohammad Hasnain<br/>6. Naveen ul Haq<br/>7. Umar Akmal<br/>8. Will Smeed<br/>9. Wanindu Hasaranga<br/>10. Naseem Shah<br/>11. Odean Smith<br/>12. Ahsan Ali<br/>13. Umaid Asif<br/>14. Muhammad Zahid<br/>15. Abdul Bangalzai<br/>16. Aimal Khan<br/>17. Martin Guptill<br/>18. Omair Bin Yousuf
-                </h3>
-            </p>
-        </font>
-        <hr/>
-        <font color="yellow">
-            <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li class="navbutton"><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Quetta Gladiators Squad</h1>
+    </center>
+    <div class="quetta">
+        <img src="./images/sarfaraz ahmed.png" alt="Sarfaraz Ahmed" width="350" height="350" align="right">
+    <ol>
+        <li>Sarfaraz Ahmed (Captain)</li>
+        <li>Muhammad Nawaz</li>
+        <li>Iftikhar Ahmed</li>
+        <li>Jason Roy</li>
+        <li>Muhammad Hasnain</li>
+        <li>Naveen-Ul-Haq</li>
+        <li>Umar Akmal</li>
+        <li>Will Smeed</li>
+        <li>Wanindu Hasaranga</li>
+        <li>Naseem Shah</li>
+        <li>Odean Smith</li>
+        <li>Ahsan Ali</li>
+        <li>Umaid Asif</li>
+        <li>Muhammad Zahid</li>
+        <li>Abdul Bangalzai</li>
+        <li>Ajmal Khan</li>
+        <li>Martin Guptill</li>
+        <li>Omair Bin Yousuf</li>
+        <li>Qais Ahmed</li>
+        <li>Saud Shakeel</li>
+    </ol>
+    </div>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
