--- a/lahore.html
+++ b/lahore.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="green">
-        <font color="black">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li style="border: 1px solid black;"><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./lahore qalandars.png" height="150" width="150" border="2"></center>
-        <center><h1>Lahore Qalandars</h1></center>
-        </font>
-        <font color="white">
-            <p>
-                <img src="./shaheen afridi.jpg" height="400" width="250" border="2" align="right">
-                <h3>
-                    1. Shaheen Shah Afridi (Captain)<br/>2. Rashid Khan<br/>3. Haris Rauf<br/>4. David Wiese<br/>5. Abdullah Shafique<br/>6. Harry Brook<br/>7. Kamran Ghulam<br/>8. Zaman Khan<br/>9. Fakhar Zaman<br/>10. Hussain Talat<br/>11. Sikandar Raza<br/>12. Liam Dawson<br/>13. Dilbar Hussain<br/>14. Mirza Tahir Baig<br/>15. Ahmed Danlyal<br/>16. Shawaiz Irfan<br/>17. Jordan Cox<br/>18. Jalat Khan
-                </h3>
-            </p>
-        </font>
-        <font color="black">
-            <hr/>
-        <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-            </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li class="navbutton"><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Lahore Qalandars Squad</h1>
+    </center>
+    <div class="lahore">
+        <img class="img" src="./images/shaheen afridi.png" alt="Shaheen Afridi" width="350" height="350" align="right">
+    </div>
+    <ol>
+        <li>Shaheen Shah Afridi (Captain)
+        <li>Haris Rauf
+        <li>Rashid Khan
+        <li>David Wiese
+        <li>Abdullah Shafique
+        <li>Harry Brook
+        <li>Kamran Ghulam
+        <li>Zaman Khan
+        <li>Fakhar Zaman
+        <li>Hussain Talat
+        <li>Sikandar Raza
+        <li>Liam Dawson
+        <li>Dilbar Hussain
+        <li>Mirza Tahir Baig
+        <li>Ahmed Daniyal
+        <li>Shahwaiz Irfan
+        <li>Jordan Cox
+        <li>Jalat Khan
+        <li>Ahsan Bhatti
+        <li>20<sup>th</sup> Player
+    </ol>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
