--- a/peshawar.html
+++ b/peshawar.html
@@ -1,35 +1,58 @@
-<html lang="en-us">
-    <head>
-        <title>
-            Pakistan Super League All Teams Squad 2023
-        </title>
-    </head>
-    <body bgcolor="orange">
-        <font color="black">
-            <ul>
-            <li><b><a href="./index.html">Home</a></b></li>
-            <li><b><a href="./islamabad.html">Islamabad United Squad</a></b></li>
-            <li><b><a href="./karachi.html">Karachi Kings Squad</a></b></li>
-            <li><b><a href="./lahore.html">Lahore Qalandars Squad</a></b></li>
-            <li><b><a href="./multan.html">Multan Sultans Squad</a></b></li>
-            <li style="border: 1px solid black ;"><b><a href="./peshawar.html">Peshawar Zalmi Squad</a></b></li>
-            <li><b><a href="./quetta.html">Quetta Gladiators Squad</a></b></li>
-            </ul>
-        <hr/>
-        <center><img src="./peshawar-zalmi.png" height="150" width="150" border="2"></center>
-        <center><h1>Peshawar Zalmi</h1></center>
-        </font>
-        <font color="darkcyan">
-            <p>
-                <img src="./babar azam.jpg" height="400" width="300" border="2" align="right">
-                <h3>
-                    1. Babar Azam (Captain)<br/>2. Sherfane Rutherford<br/>3. Wahab Riaz<br/>4. Mohammad Haris<br/>5. Aamir Jamal<br/>6. Salman Irshad<br/>7. Tom-Kohler Cadmore<br/>8. Bhanuka Rajapaksa<br/>9. Rovman Powell<br/>10. Mujeeb ur Rahman<br/>11. Danish Aziz<br/>12. Arshad Iqbal<br/>13. Saim Ayub<br/>14. Usman Qadir<br/>15. Suifyan Muqeem<br/>16. Haseeb Ullah<br/>17. Jimmy Neesham
-                </h3>
-            </p>
-        </font>
-        <hr/>
-        <font color="black">
-        <center><h1>Are You Ready For PSL 2023 ?</h1></center>
-        </font>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>PSL Squad</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Muhammad Ahad">
+    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
+</head>
+<body>
+    <div class="break">
+    <nav>
+        <ul class="nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./islamabad.html">Islamabad United</a></li>
+            <li><a href="./karachi.html">Karachi Kings</a></li>
+            <li><a href="./lahore.html">Lahore Qalandars</a></li>
+            <li><a href="./multan.html">Multan Sultans</a></li>
+            <li class="navbutton"><a href="./peshawar.html">Peshawar Zalmi</a></li>
+            <li><a href="./quetta.html">Quetta Gladiators</a></li>
+        </ul>
+    </nav>
+    </div>
+    <center>
+        <h1>Peshawar Zalmi Squad</h1>
+    </center>
+    <div class="peshawar">
+        <img src="./images/babar azam.png" alt="Babar Azam" width="350" height="350" align="right">
+    <ol>
+        <li>Babar Azam (Captain)
+        <li>Sherfane Rutherford
+        <li>Wahab Riaz
+        <li>Muhammad Haris
+        <li>Aamir Jamal
+        <li>Salma Irshad
+        <li>Tom-Kohler Cadmore
+        <li>Bhanuka Rajapaksa
+        <li>Rowman Powell
+        <li>Mujeeb-Ur-Rehman
+        <li>Danish Aziz
+        <li>Arshad Iqbal
+        <li>Saim Ayub
+        <li>Usman Qadir
+        <li>Suifyan Muqeem
+        <li>HaseebUllah
+        <li>Jimmy Neesham
+        <li>Khurram Shahzad
+        <li>Haris Sohail
+        <li>20<sup>th</sup> Player
+    </ol>
+    </div>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
+</body>
 </html>
