--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
         <img src="./images/babar azam.png" width="200" height="200">
         <img src="./images/sarfaraz ahmed.png" width="200" height="200">
     </center>
+    <hr/>
+    <center>
+        <p>Thanks For Visiting This Web Regards Muhammad Ahad &copy;</p>
+    </center>
 </body>
 </html>
